--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,12 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".AlarmReceiver">
+            <intent-filter>
+                <action android:name="org.traccar.client.reschedule" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
